--- a/TourGuide/build.gradle
+++ b/TourGuide/build.gradle
@@ -1,23 +1,16 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.6.RELEASE")
-    }
+plugins {
+	id 'java'
+	id 'org.springframework.boot' version '2.6.2'
+	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	//id 'jacoco'
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-apply plugin: "jacoco"
+group = 'tourGuide'
+version = '1.0.0'
+sourceCompatibility = '11'
 
-
-bootJar {
-    baseName = 'tourGuide'
-    version =  '1.0.0'
+repositories {
+	mavenCentral()
 }
 
 repositories {
@@ -27,32 +20,34 @@ repositories {
     }
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
-    compile("org.springframework.boot:spring-boot-starter-actuator")
-    compile group: 'org.javamoney', name: 'moneta', version: '1.3'
-	compile group: 'com.jsoniter', name: 'jsoniter', version: '0.9.23'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    //implementation("org.springframework.boot:spring-boot-starter-actuator")
+    implementation group: 'org.javamoney', name: 'moneta', version: '+'
+	implementation group: 'com.jsoniter', name: 'jsoniter', version: '+'
 	
-    compile(name:'gpsUtil', ext:'jar')
-    compile(name:'RewardCentral', ext:'jar')
-    compile(name:'TripPricer', ext:'jar')
+    implementation files('libs/gpsUtil.jar')
+    implementation files('libs/RewardCentral.jar')
+    implementation files('libs/TripPricer.jar')
     
-    testCompile("junit:junit")
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.1.6.RELEASE'
+    //testImplementation("junit:junit")
+    //testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '+'
 }
 
-
+test {
+	useJUnitPlatform()
+}
+/* //TODO: Add jacoco
 jacoco {
-    toolVersion = "0.8.4"
+    toolVersion = "+"
 }
 
 jacocoTestReport {
     reports {
-        xml.enabled true
-        csv.enabled false
+        xml.required = true
+        csv.required = false
         html.destination file("${buildDir}/jacocoHtml")
     }
 }
@@ -71,3 +66,4 @@ jacocoTestCoverageVerification {
     }
   }
 }
+*/
