--- a/GpsUtilDocker/src/main/resources/application.properties
+++ b/GpsUtilDocker/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+#Server ---------------------------------
 
+server.port=9001
+
+#Logging --------------------------------
+
+logging.level.root=info
+logging.level.tourGuide.gpsUtil.docker=debug
