--- a/GpsUtilDocker/Dockerfile
+++ b/GpsUtilDocker/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:11
 EXPOSE 9001
-ADD build/libs/GpsUtilDocker-1.0.0.jar GpsUtilDocker-1.0.0.jar
-CMD ["java","-jar","GpsUtilDocker-1.0.0.jar"]
+ADD build/libs/GpsUtil-1.0.0.jar GpsUtil-1.0.0.jar
+CMD ["java","-jar","GpsUtil-1.0.0.jar"]
