Setting up reward central microservice

--- a/RewardCentral/src/main/resources/application.properties
+++ b/RewardCentral/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.application.name=microservice-gpsutil
+spring.application.name=microservice-rewardcentral
 
 #Server ---------------------------------
 
-server.port=9001
+server.port=9002
 
 #Logging --------------------------------
 
 logging.level.root=info
-logging.level.tourGuide.gpsUtil=debug
+logging.level.tourGuide.rewardCentral=debug
