Preparing docker container

--- a/TourGuide/src/main/resources/application.properties
+++ b/TourGuide/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-logging.level.tourGuide=DEBUG
+spring.application.name=tourguide
+
+#Server ---------------------------------
+
+server.port=9000
+
+#Logging --------------------------------
+
+logging.level.root=info
+logging.level.tourGuide=debug
