--- a/TourGuide/src/main/resources/application.properties
+++ b/TourGuide/src/main/resources/application.properties
@@ -8,3 +8,11 @@ server.port=9000
 
 logging.level.root=info
 logging.level.tourGuide=debug
+
+#Tracking -------------------------------
+
+tracking=true
+
+#Test Mode ------------------------------
+
+testmode=true
