Adding docker-compose.yml.

--- a/TourGuide/src/main/resources/application.properties
+++ b/TourGuide/src/main/resources/application.properties
@@ -16,3 +16,8 @@ tracking=true
 #Test Mode ------------------------------
 
 testmode=true
+
+#Microservices Url ----------------------
+
+url.gpsutil=http://localhost:9001
+url.rewardcentral=http://localhost:9002
