--- a/TourGuide/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/TourGuide/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -8,5 +8,15 @@
     "name": "tracking",
     "type": "java.lang.String",
     "description": "A description for 'tracking'"
+  },
+  {
+    "name": "url.gpsutil",
+    "type": "java.lang.String",
+    "description": "A description for 'url.gpsutil'"
+  },
+  {
+    "name": "url.rewardcentral",
+    "type": "java.lang.String",
+    "description": "A description for 'url.rewardcentral'"
   }
 ]}
